# swing_trading_system

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.ko.md  README.md  docker-compose.yml  pyproject.toml
.agents/rules/: project-rules.md
dbt/: dbt_project.yml  profiles.yml
dbt/models/: schema.yml  sources.yml
docs/: agent-core.md  architecture_contract.md  infra_runtime_contract.md  market_regime_switching_strategy_plan.md  operations_runbook.md  review_market_regime_switching_strategy.md  shared_data_contract.md  swing_trading_system_draft.md  swing_trading_system_plan.md  user_manual.md
docs/plan/: sprint_0_execution_plan.md  sprint_0_review.md  sprint_1_execution_plan.md  sprint_1_readiness_checklist.md  sprint_1_review.md  sprint_1_review_followup.md  sprint_2_execution_plan.md  sprint_2_qa_starting_points.md  sprint_2_review.md  sprint_3_execution_plan.md  sprint_3_review.md  swing_trading_system_execution_plan.md
docs/reports/: backtest_report_bt-20260512T050320926157Z.md  backtest_strategy_analysis_20260520.md
infra/web/: Dockerfile  serverctl.sh
sql/: 01_swing_schema.sql
tests/: test_backfill.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_optimizer.py  test_backtest_repository.py  test_backtest_safety.py  test_cli.py  test_config.py  test_db.py  test_execution_service.py  test_features.py  test_indicators.py  test_regime.py  test_screener.py  test_screening_input_loader.py  test_screening_pipeline.py  test_shared_market.py  test_strategies.py  test_swing_repository_contract.py  test_universe.py  test_web_app.py  test_web_routes.py
(+58 files in other folders)
