[project]
name = "swing-trading-system"
version = "0.1.0"
description = "Independent swing trading system that reuses shared market data from the quant platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.42.1",
    "boto3>=1.42.94",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swing_trading_system"]

[project.scripts]
swing-system = "swing_trading_system.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
