[project]
name = "swing-trading-system"
version = "0.1.0"
description = "Swing trading system foundation and data access layer"
readme = "README.md"
authors = [
    { name = "Joohyung You", email = "jh697.you@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.0",
    "fastapi>=0.110.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
swing-system = "swing_trading_system.cli:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]
